第n問表示を追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <h1>問題</h1>
+        <h1 id="nOfQuestions"></h1>
         <p id="question"></p>
         <p id="choices"></p>
         <div class="buttons">
