カウントダウン追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="app">
+        <p id="timer-container">あと<span id="timer" class="timer"></span>秒</p>
         <h1 id="nOfQuestions"></h1>
         <p id="question"></p>
         <p id="choices"></p>
