よくわかる解説

--- a/result3.html
+++ b/result3.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>あなたはフツウです</h1>
-    <a href="explanation.html">解説を見る</a>
+    <a href="explanation.html">よくわかる解説</a>
 
 </body>
 
